<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextHeader"
            android:text="@string/general"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/Button1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/general"
            android:layout_weight="3"
            style="@style/Button"/>
        <Button
            android:id="@+id/Button2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/general"
            android:layout_weight="3"
            style="@style/Button"/>
        <Button
            android:id="@+id/Button3"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/general"
            android:layout_weight="3"
            style="@style/Button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/select"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTime"
        android:text="@string/time"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tvTimeSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/time"
        android:layout_margin="10dp"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/tvDateSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/date"
        android:layout_margin="10dp"
        android:textSize="22sp"/>
    <Button
        android:id="@+id/btnGitHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/github"/>
</LinearLayout>