<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <TextView
            android:id="@+id/tvAuthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notAuthorized"
            app:layout_constraintEnd_toEndOf="@id/loginLayout"
            app:layout_constraintStart_toStartOf="@id/loginLayout"
            app:layout_constraintTop_toTopOf="@id/loginLayout"
            android:layout_marginTop="200dp"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/signin"
            app:layout_constraintTop_toBottomOf="@id/tvAuthTitle"
            app:layout_constraintStart_toStartOf="@id/tvAuthTitle"
            app:layout_constraintEnd_toEndOf="@id/tvAuthTitle"
            android:layout_marginTop="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/profileLayout"
            app:layout_constraintStart_toStartOf="@id/profileLayout"
            />
        <TextView
            android:id="@+id/tvProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="@id/profileLayout"
            app:layout_constraintStart_toStartOf="@id/profileLayout"
            app:layout_constraintTop_toTopOf="@id/profileLayout"
            android:layout_marginTop="200dp"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/btnProfileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text=""
            app:layout_constraintTop_toBottomOf="@id/tvProfileTitle"
            app:layout_constraintStart_toStartOf="@id/profileLayout"
            app:layout_constraintEnd_toEndOf="@id/profileLayout"
            android:layout_marginTop="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>